  - Fix javadoc warning, courtesy of Warriorrrr with PR #5495.
  - Schedule the next newday scheduler 1 minute after a new day happens instead of 1 second after. 
  - Fix NewDay time code returning negative for some time zones. 
0.97.5.0:
  - Bump version number for hotfix release.
0.97.5.1:
  - Add helpful methods to BaseCommand.
  - Fix regex used to split the townyperms.yml error message.
  - API: Added StatusScreenEvent#getCommandSender()
    - It is now possible to learn who is going to view the StatusScreen being made.
  - Fix expired invite handler not accounting for sent nation ally invites.
  - New /ta merging commands, courtesy of Gamer153 with PR #5491. (First-Time Contributor!)
  - New Command: /ta town [townname] merge [townname] - Asks the 2nd town if they want to merge with the first.
  - New Command: /ta town [townname] forcemerge [townname] - Forcefully merges the 2nd town into the first.
  - New Command: /ta nation [nationname] merge [nationname] - Asks the 2nd nation if they want to merge with the first.
  - New Command: /ta nation [nationname] forcemerge [nationname] - Forcefully merges the 2nd nation into the first.
  - Make town neutrality cost appear on /towny prices for #5500.
  - Add town and nation neutrality costs to their respective status screens.
    - Closes #5500.
  - Reorganization and cleanup of Town, Nation, and TownySettings, courtesy of FlagCourier with PR #5493.
  - Made it possible for the {townname} placeholder to be used in the wilderness_title and wilderness_subtitle messages.
  - Townyperms.yml nations' default rank will automatically be given towny.command.nation.spawn.
  - Add 2 convenience methods to PreNewTownEvent, courtesy of Warriorrrr with PR #5504.
  - Fix possible tab completion NPE, courtesy of Warriorrrr with PR #5506.
  - Allow lava_cauldrons to kill minecarts.
    - Closes #5503.
  - Call the pre new town event after any confirmations are confirmed, courtesy of Warriorrrr with PR #5508.